Check Empty Completed and all todos count

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <!-- ! Todos -->
           <div class="todos" id="todosContainer"></div>
           <!-- ! Empty Case -->
-          <div class="empty">
+          <div class="empty" id="emptyContainer">
             <img src="./images/Clipboard.png" alt="" />
             <div class="content">
               <p>You don't have tasks added yet</p>
